# rusterizer

./: Cargo.toml  Readme.md  build.sh
docs/: index.html  rusterizer-2fcaa06f1d395d01.js  rusterizer-2fcaa06f1d395d01_bg.wasm  rusterizer-3061806d61d46773.js  rusterizer-3061806d61d46773_bg.wasm  rusterizer-32d601574dfd8888.js  rusterizer-32d601574dfd8888_bg.wasm  rusterizer-470577dfdf2dd194.js  rusterizer-470577dfdf2dd194_bg.wasm  rusterizer-51a47678c515f18b.js  rusterizer-51a47678c515f18b_bg.wasm  rusterizer-5b8c04a4acfbfc95.js  rusterizer-5b8c04a4acfbfc95_bg.wasm  rusterizer-672288e624e4aea2.js  rusterizer-672288e624e4aea2_bg.wasm  rusterizer-72cbc0be6ff652d1.js  rusterizer-72cbc0be6ff652d1_bg.wasm  rusterizer-81ebfbfb6d23a5df.js  rusterizer-81ebfbfb6d23a5df_bg.wasm  rusterizer-aeafd2da69b7b804.js  rusterizer-aeafd2da69b7b804_bg.wasm  rusterizer-b84d93e4d1a10a7e.js  rusterizer-b84d93e4d1a10a7e_bg.wasm  rusterizer-d1c53c99e12bbfd8.js  rusterizer-d1c53c99e12bbfd8_bg.wasm  rusterizer-d90ec538786e0014.js  rusterizer-d90ec538786e0014_bg.wasm
src/: camera.rs  hit.rs  la.rs  main.rs  materials.rs  model.rs  objects.rs  ray.rs  scene.rs  shader.rs  tga.rs  transform.rs  utils.rs  web.rs
src/camera/: basic_camera.rs  mod.rs  perspective_camera.rs  traits.rs
src/la/: matrix.rs  mod.rs  vec.rs
src/models/: mesh_object.rs  mod.rs  objects.rs  traits.rs
src/raytracing/: exposure_camera.rs  hit.rs  materials.rs  mod.rs
src/render/: config.rs  mod.rs  render_type.rs  shader_render.rs  traits.rs
src/scene/: mod.rs  rasterizable_scene.rs  raytracing_scene.rs  traits.rs
src/shader/: basic_shader.rs  light_shader.rs  mod.rs  shader_config.rs  traits.rs
src/utils/: mod.rs  random_sample.rs  vector_calculation.rs
