[package]
name = "rusterizer"
version = "0.1.1"
authors = ["ironhead <iron_head@icloud.com>"]
edition = "2021"

[features]
default = ["yew", "wasm-bindgen", "anyhow"]
raytracing = []

[dependencies]
wasm-bindgen = {version=">=0.2", optional = true}
yew = {version = "~0.18", optional = true}
anyhow = {version=">=1", optional = true}
libm = ">=0.2"
rand = "0.8.5"

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "ImageData",
  "Document",
  "DomTokenList",
  "Element",
  "HtmlCanvasElement",
  "Node",
  "Window",
]
